--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </div>
         <footer class="bottom-links">
              <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">ورسل</a>
-             <a href="https://smbcryp.github.io/v2v-data/" target="_blank" rel="noopener noreferrer">دیتا</a>
-             <a href="https://smbcryp.github.io/v2v/" target="_blank" rel="noopener noreferrer">سایت اصلی (گیت‌هاب)</a>
+             <a href="https://smbcryp.github.io/v2v/" target="_blank" rel="noopener noreferrer">گیت‌هاب پیج‌ها</a>
+             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">آروان‌کلاد</a>
         </footer>
     </div>
     <div id="qr-modal"><div class="qr-content" id="qr-code-container"></div></div>
