--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <footer class="bottom-links">
              <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">Vercel</a>
-             <a href="https://smbcryp.github.io/v2v/" target="_blank" rel="noopener noreferrer">GitHub Pages</a>
+             <a href="https://smbcryp.github.io/V2V/" target="_blank" rel="noopener noreferrer">GitHub Pages</a>
              <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">ArvanCloud</a>
         </footer>
     </div>
