--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
     <style>
+        /* ... (CSS بدون تغییر باقی می‌ماند) ... */
         *, *::before, *::after { box-sizing: border-box; }
         :root {
             --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0; --border-color: #2e2e2e;
