--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             --ping-good: #4CAF50; --ping-medium: #FFC107; --ping-bad: #F44336;
             --toast-bg: linear-gradient(135deg, #34d399, #10b981);
             --toast-error-bg: linear-gradient(135deg, #f87171, #ef4444);
+            --copy-selected-bg: #28a745; /* رنگ سبز برای دکمه کپی انتخابی */
+            --copy-selected-hover-bg: #218838;
         }
         body { background-color: var(--primary-bg); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align: center; margin: 0; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
         .main-wrapper { width: 100%; max-width: 700px; padding: 15px; }
@@ -34,6 +36,23 @@
         .test-button { background: var(--test-button-bg); border: 1px solid #7c5115; color: #ffab40; padding: 12px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: all 0.3s ease; display: flex; justify-content: center; align-items: center; gap: 8px; margin-bottom: 15px; }
         .test-button:hover { background-color: var(--test-button-hover-bg); }
         .test-button:disabled { background-color: #555; cursor: not-allowed; transform: none; color: #aaa; border-color: #666; }
+
+        /* استایل دکمه جدید "کپی موارد انتخابی" */
+        .action-btn-wide { 
+            background: var(--copy-selected-bg); 
+            border: 1px solid var(--copy-selected-hover-bg); 
+            color: #fff; 
+            padding: 10px 20px; 
+            border-radius: 8px; 
+            cursor: pointer; 
+            font-weight: bold; 
+            font-size: 1em; 
+            width: 100%; 
+            transition: background-color 0.3s ease; 
+            margin-bottom: 15px; 
+        }
+        .action-btn-wide:hover { background-color: var(--copy-selected-hover-bg); }
+
         .action-group-title { color: #ccc; font-size: 0.9em; font-weight: bold; text-align: right; margin: 25px 0 10px 0; padding-bottom: 5px; border-bottom: 1px solid var(--border-color); }
         .action-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; margin-bottom: 10px; }
         .action-box-label { font-size: 0.9em; font-weight: 500; }
@@ -51,7 +70,19 @@
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
         .server { font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
         .ping-result-container { font-size: 0.85em; min-width: 65px; text-align: right; font-weight: bold; display: flex; align-items: center; justify-content: flex-end; }
-        .copy-btn { background-color: #3e3e3e; border: 1px solid #555; padding: 5px 10px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.85em; }
+        
+        /* استایل دکمه جدید 'کپی+QR' */
+        .copy-qr-btn { 
+            background-color: #106385; /* رنگ متمایز آبی/فیروزه‌ای */
+            border: 1px solid #1a8cc6;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            color: #e0e0e0;
+            font-size: 0.85em;
+            white-space: nowrap;
+        }
+
         .loader-small { width: 14px; height: 14px; border: 2px solid #ffab40; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; vertical-align: middle; }
         @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         .bottom-links { margin-top: auto; padding: 20px 0 10px 0; width: 100%; display: flex; gap: 20px; justify-content: center; flex-wrap: wrap; }
