--- a/index.html
+++ b/index.html
@@ -12,254 +12,70 @@
     <style>
         *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
         :root {
-            --primary-bg: #121212; 
-            --secondary-bg: #1e1e1e; 
-            --text-color: #e0e0e0; 
-            --border-color: #2e2e2e;
-            --action-gray: #2a2a2a; 
-            --test-button-bg: #4a2a00; 
-            --test-button-hover-bg: #6e3f00;
-            --ping-good: #4CAF50; 
-            --ping-medium: #FFC107; 
-            --ping-bad: #F44336;
+            --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0; --border-color: #2e2e2e;
+            --action-gray: #2a2a2a; --test-button-bg: #4a2a00; --test-button-hover-bg: #6e3f00;
+            --ping-good: #4CAF50; --ping-medium: #FFC107; --ping-bad: #F44336;
             --toast-bg: linear-gradient(135deg, #34d399, #10b981);
             --toast-error-bg: linear-gradient(135deg, #f87171, #ef4444);
-            --copy-selected-bg: #28a745; 
-            --copy-selected-hover-bg: #218838;
+            --copy-selected-bg: #28a745; --copy-selected-hover-bg: #218838;
         }
-        body { 
-            background-color: var(--primary-bg); 
-            color: var(--text-color); 
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
-            text-align: center; 
-            display: flex; 
-            flex-direction: column; 
-            align-items: center; 
-            min-height: 100vh; 
-        }
+        body { background-color: var(--primary-bg); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; text-align: center; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
         .main-wrapper { width: 100%; max-width: 700px; padding: 15px; }
         .header { margin-bottom: 20px; }
         .header img { width: 100px; height: 100px; }
         .slogan { font-size: 0.9em; color: #aaa; margin-top: 10px; }
         .status-bar { font-size: 0.8em; color: #888; margin-bottom: 20px; min-height: 1em; }
-        .container { 
-            width: 100%; 
-            background-color: var(--secondary-bg); 
-            padding: 20px; 
-            border-radius: 12px; 
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
-            margin-bottom: 20px; 
-        }
+        .container { width: 100%; background-color: var(--secondary-bg); padding: 20px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); margin-bottom: 20px; }
         .core-section { margin-bottom: 25px; }
         .core-section:last-child { margin-bottom: 0; }
-        .core-header { 
-            color: white; 
-            padding: 15px; 
-            border-radius: 10px; 
-            font-size: 1.3em; 
-            font-weight: bold; 
-            margin-bottom: 20px; 
-        }
+        .core-header { color: white; padding: 15px; border-radius: 10px; font-size: 1.3em; font-weight: bold; margin-bottom: 20px; }
         #xray-header { background: linear-gradient(135deg, #c31432, #240b36); }
         #singbox-header { background: linear-gradient(135deg, #159957, #155799); }
-        .test-button { 
-            background: var(--test-button-bg); 
-            border: none; 
-            color: #ffab40; 
-            padding: 12px 20px; 
-            border-radius: 8px; 
-            cursor: pointer; 
-            font-weight: bold; 
-            font-size: 1em; 
-            width: 100%; 
-            transition: all 0.3s; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            gap: 8px; 
-            margin-bottom: 15px; 
-        }
+        .test-button { background: var(--test-button-bg); border: none; color: #ffab40; padding: 12px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: all 0.3s; display: flex; justify-content: center; align-items: center; gap: 8px; margin-bottom: 15px; }
         .test-button:hover { background-color: var(--test-button-hover-bg); }
         .test-button:disabled { background-color: #555; cursor: not-allowed; color: #aaa; }
-        .action-btn-wide { 
-            background: var(--copy-selected-bg); 
-            border: none; 
-            color: #fff; 
-            padding: 10px 20px; 
-            border-radius: 8px; 
-            cursor: pointer; 
-            font-weight: bold; 
-            font-size: 1em; 
-            width: 100%; 
-            transition: background-color 0.3s; 
-            margin-bottom: 15px; 
-        }
+        .action-btn-wide { background: var(--copy-selected-bg); border: none; color: #fff; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: background-color 0.3s; margin-bottom: 15px; }
         .action-btn-wide:hover { background-color: var(--copy-selected-hover-bg); }
         
-        .sub-section { 
-            background-color: var(--action-gray); 
-            padding: 12px 15px; 
-            border-radius: 8px; 
-            margin-bottom: 12px; 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-            flex-wrap: wrap; 
-            gap: 10px; 
-        }
-        .sub-title { 
-            font-size: 0.95em; 
-            font-weight: 600; 
-            color: #ddd; 
-            flex-shrink: 0; 
-        }
-        .sub-actions { display: flex; gap: 8px; flex-wrap: wrap; }
-        .sub-btn { 
-            background-color: #444; 
-            border: none; 
-            color: var(--text-color); 
-            padding: 7px 14px; 
-            border-radius: 6px; 
-            cursor: pointer; 
-            font-size: 0.85em; 
-            transition: all 0.2s; 
-            white-space: nowrap; 
-            font-weight: 500; 
-        }
+        .sub-section { background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 8px; }
+        .sub-title { font-size: 0.9em; font-weight: 600; color: #ddd; flex-shrink: 0; }
+        .sub-actions { display: flex; gap: 6px; flex-wrap: wrap; }
+        .sub-btn { background-color: #444; border: none; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.82em; transition: all 0.2s; white-space: nowrap; font-weight: 500; }
         .sub-btn:hover { background-color: #555; transform: translateY(-1px); }
         .sub-btn.qr { background-color: #5a4fcf; color: white; }
         .sub-btn.qr:hover { background-color: #6b5fd9; }
         
         .protocol-group { border-top: 1px solid var(--border-color); }
-        .protocol-header { 
-            padding: 15px 5px; 
-            cursor: pointer; 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-            font-weight: bold; 
-        }
+        .protocol-header { padding: 12px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; font-size: 0.95em; }
         .toggle-icon { transition: transform 0.3s; }
         .protocol-group.open .toggle-icon { transform: rotate(180deg); }
-        .config-list { 
-            list-style: none; 
-            max-height: 0; 
-            overflow: hidden; 
-            transition: max-height 0.4s ease-in-out; 
-        }
+        .config-list { list-style: none; max-height: 0; overflow: hidden; transition: max-height 0.4s ease-in-out; }
         .protocol-group.open .config-list { max-height: 50000px; overflow-y: auto; }
-        .config-item { 
-            padding: 10px 5px; 
-            border-top: 1px solid var(--border-color); 
-            display: flex; 
-            align-items: center; 
-            gap: 8px; 
-            flex-wrap: wrap; 
-        }
-        .config-checkbox { 
-            flex-shrink: 0; 
-            transform: scale(1.2); 
-            accent-color: var(--ping-good); 
-        }
-        .config-details { 
-            flex: 1; 
-            min-width: 150px; 
-            text-align: right; 
-            overflow: hidden; 
-        }
-        .config-details label { cursor: pointer; font-weight: 500; display: block; }
-        .server { 
-            font-size: 0.85em; 
-            color: #aaa; 
-            white-space: nowrap; 
-            overflow: hidden; 
-            text-overflow: ellipsis; 
-        }
-        .ping-result-container { 
-            font-size: 0.85em; 
-            min-width: 50px; 
-            text-align: center; 
-            font-weight: bold; 
-        }
-        .config-item-buttons { display: flex; gap: 5px; }
-        .action-btn-small { 
-            background-color: #444; 
-            border: none; 
-            color: var(--text-color); 
-            padding: 6px 12px; 
-            border-radius: 6px; 
-            cursor: pointer; 
-            font-size: 0.8em; 
-            transition: background-color 0.2s; 
-            white-space: nowrap; 
-        }
-        .action-btn-small:hover { background-color: #555; }
-        .loader-small { 
-            width: 14px; 
-            height: 14px; 
-            border: 2px solid #ffab40; 
-            border-bottom-color: transparent; 
-            border-radius: 50%; 
-            display: inline-block; 
-            animation: rotation 1s linear infinite; 
-        }
-        @keyframes rotation { 
-            0% { transform: rotate(0deg); } 
-            100% { transform: rotate(360deg); } 
-        }
-        .bottom-links { 
-            margin-top: auto; 
-            padding: 20px 0 10px 0; 
-            display: flex; 
-            gap: 20px; 
-            justify-content: center; 
-            flex-wrap: wrap; 
-        }
+        .config-item { padding: 8px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 8px; }
+        .config-checkbox { flex-shrink: 0; transform: scale(1.1); accent-color: var(--ping-good); cursor: pointer; }
+        .config-info { flex: 1; min-width: 0; text-align: right; }
+        .config-info label { cursor: pointer; font-weight: 500; display: block; font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .server { font-size: 0.75em; color: #888; }
+        .ping-result { font-size: 0.85em; min-width: 45px; text-align: center; font-weight: bold; }
+        .config-btns { display: flex; gap: 4px; flex-shrink: 0; }
+        .btn-icon { background-color: #333; border: none; color: var(--text-color); padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 0.9em; transition: background-color 0.2s; }
+        .btn-icon:hover { background-color: #444; }
+        .loader-small { width: 14px; height: 14px; border: 2px solid #ffab40; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; }
+        .loader-mini { width: 10px; height: 10px; border: 2px solid #ffab40; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; }
+        @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .bottom-links { margin-top: auto; padding: 20px 0 10px 0; display: flex; gap: 20px; justify-content: center; flex-wrap: wrap; }
         .bottom-links a { color: #aaa; text-decoration: none; font-size: 0.9em; }
         .alert { padding: 20px; color: var(--ping-bad); }
-        #qr-modal { 
-            display: none; 
-            position: fixed; 
-            z-index: 1000; 
-            left: 0; 
-            top: 0; 
-            width: 100%; 
-            height: 100%; 
-            background-color: rgba(0,0,0,0.9); 
-            justify-content: center; 
-            align-items: center; 
-            cursor: pointer; 
-        }
-        .qr-content { 
-            background-color: white; 
-            padding: 25px; 
-            border-radius: 12px; 
-            cursor: default; 
-        }
-        .toast { 
-            visibility: hidden; 
-            min-width: 250px; 
-            background: var(--toast-bg); 
-            color: #fff; 
-            text-align: center; 
-            border-radius: 8px; 
-            padding: 16px; 
-            position: fixed; 
-            z-index: 2000; 
-            left: 50%; 
-            transform: translateX(-50%); 
-            bottom: 30px; 
-            font-size: 17px; 
-            transition: all 0.5s; 
-            opacity: 0; 
-        }
+        #qr-modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); justify-content: center; align-items: center; cursor: pointer; }
+        .qr-content { background-color: white; padding: 25px; border-radius: 12px; cursor: default; }
+        .toast { visibility: hidden; min-width: 250px; background: var(--toast-bg); color: #fff; text-align: center; border-radius: 8px; padding: 16px; position: fixed; z-index: 2000; left: 50%; transform: translateX(-50%); bottom: 30px; font-size: 17px; transition: all 0.5s; opacity: 0; }
         .toast.show { visibility: visible; opacity: 1; bottom: 50px; }
         .toast.error { background: var(--toast-error-bg); }
         @media (max-width: 600px) {
             .sub-section { flex-direction: column; align-items: flex-start; }
             .sub-actions { width: 100%; justify-content: flex-start; }
-            .config-item { flex-direction: column; align-items: flex-start; }
-            .config-details { width: 100%; }
+            .config-item { gap: 6px; }
+            .config-info label { font-size: 0.85em; }
         }
     </style>
 </head>
