--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         .test-button:disabled { background-color: #555; cursor: not-allowed; color: #aaa; }
         .action-btn-wide { background: var(--copy-selected-bg); border: none; color: #fff; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: background-color 0.3s; margin-bottom: 15px; }
         .action-btn-wide:hover { background-color: var(--copy-selected-hover-bg); }
-        
         .sub-section { background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 8px; }
         .sub-title { font-size: 0.9em; font-weight: 600; color: #ddd; flex-shrink: 0; }
         .sub-actions { display: flex; gap: 6px; flex-wrap: wrap; }
@@ -44,10 +43,12 @@
         .sub-btn:hover { background-color: #555; transform: translateY(-1px); }
         .sub-btn.qr { background-color: #5a4fcf; color: white; }
         .sub-btn.qr:hover { background-color: #6b5fd9; }
-        
         .protocol-group { border-top: 1px solid var(--border-color); }
-        .protocol-header { padding: 12px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; font-size: 0.95em; }
-        .toggle-icon { transition: transform 0.3s; }
+        .protocol-header { padding: 12px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; font-size: 0.95em; gap: 10px; }
+        .protocol-header > span { flex: 1; text-align: right; }
+        .btn-copy-protocol { background-color: #333; border: none; color: #4CAF50; padding: 4px 10px; border-radius: 5px; cursor: pointer; font-size: 0.85em; transition: all 0.2s; flex-shrink: 0; }
+        .btn-copy-protocol:hover { background-color: #444; transform: scale(1.05); }
+        .toggle-icon { transition: transform 0.3s; flex-shrink: 0; }
         .protocol-group.open .toggle-icon { transform: rotate(180deg); }
         .config-list { list-style: none; max-height: 0; overflow: hidden; transition: max-height 0.4s ease-in-out; }
         .protocol-group.open .config-list { max-height: 50000px; overflow-y: auto; }
